# MedLearn-Agent

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  cliff.toml  eval_results.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data-alloy/: alloy_seed.json
docs/: architecture.md
k8s/base/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml  service.yaml
otel/: alloy.config.alloy  docker-compose.yml
otel/data-alloy/: alloy_seed.json
scripts/: execute_flow.sh  run_healthbot.py  run_prompt_evals.py
src/healthbot/api/: app.py  dependencies.py  security.py
src/healthbot/cli/: main.py
src/healthbot/config/: settings.py
src/healthbot/core/: config.py  exceptions.py  logging.py  settings.py
src/healthbot/domain/: evidence.py  models.py  quiz_models.py
src/healthbot/evals/: judge.py  models.py  rubric.py  runner.py
src/healthbot/infra/: llm_observed.py  llm_provider.py  search_provider.py  web_search_tool.py
src/healthbot/models/: quiz_models.py
src/healthbot/observability/: metrics.py  otel.py  tracing.py
src/healthbot/prompts/: __init__.py  base.py  health_agent.py  health_validator.py  judge.py  quiz_explanation.py  quiz_generation.py  registry.py  rejection.py  (+1 more)
tests/: conftest.py  test_metrics.py  test_prompt_regression.py  test_quiz.py  test_quiz_approval.py  test_quiz_grading.py  test_quiz_service.py  test_safety_regression.py  test_search_provider_singleton.py  test_session_repository.py  test_sqlite_session_repository.py  test_validation.py  test_workflow.py
tests/e2e/: test_quiz_full_flow.py  test_workflow.py
tests/fixtures/: quiz_fixtures.py  search_fixtures.py  session_fixtures.py  workflow_fixtures.py
tests/integration/: test_api_routes.py  test_quiz_service.py  test_session_repository.py  test_sqlite_session_repository.py  test_web_search_tool.py
tests/regression/: test_prompt_regression.py  test_regression_examples.py  test_safety_regression.py
tests/unit/: test_answer_composer.py  test_citation_formatter.py  test_evidence.py  test_medical_policy.py  test_metrics.py  test_prompt_experiment_resolver.py  test_prompt_manager.py  test_prompt_registry.py  test_quiz_approval.py  test_quiz_grading.py  test_safety_classifier.py  test_search_provider.py  test_search_provider_singleton.py  test_validation.py
(+31 files in other folders)
